fixing colour bucketing and key (WIP with visible debugging info)

--- a/app/styles/_map.scss
+++ b/app/styles/_map.scss
@@ -178,6 +178,7 @@
         display: inline-block ;
         outline: 1px solid rgba(255,255,255,0.5) ;
         height: 15px ;
+        text-align: center ;
       }
     .the-labels {
       // outline: 1px solid blue ;
